<resources>
    <string name="app_name">Chat.in</string>
    <string name="item_setting_action_title">Settings</string>
    <string name="main_view_tab_layout_chat_tab">CHAT</string>
    <string name="main_view_tab_layout_contacts_tab">CONTACTS</string>

    <string name="time_format" translatable="false">h:mma</string>
    <string name="message_date" translatable="false">MMM dd \'AT\' h:mm a</string>
    <string name="date_format" translatable="false">M/dd/yyyy</string>
    <string name="toolbar_settings_title">Settings</string>

    <!-- settings.xml-->
    <string name="settings_notifications_title">Notifications</string>
    <string name="notification_vibrate_key">notification_vibrate_key</string>
    <string name="notification_vibrate_title">Vibrate</string>
    <string name="notification_vibrate_summary_on">On</string>
    <string name="notification_vibrate_summary_off">Off</string>
    <string name="notification_sound_key">notification_sound_key</string>
    <string name="notification_sound_title">Sound</string>
    <string name="notification_sound_summary_on">On</string>
    <string name="notification_sound_summary_off">Off</string>
    <string name="permisson_read_contacts_explanation">Read contacts permission is required to show chats</string>
    <string name="select_image_profile">Select Picture</string>
    <string name="type_a_message">Message</string>
    <string name="permission_phone_number">Get phone number is necessary to chat with others</string>

    <!-- fragment_auth.xml-->
    <string name="spinner_title">Choose a country</string>
    <string name="spinner_country_label">Country</string>
    <string name="edit_text_phone_number_hint">Phone number</string>
    <string name="button_next_step_phone_number">Next</string>
    <string name="country_code_required">Country code is required</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="only_digits_allowance">Phone number must contains only digits</string>

    <!-- fragment_auth.xml -->

    <string name="verify_mobile_label">Verify mobile</string>
    <string name="verify_mobile_description">Please enter your mobile number</string>

    <!-- fragment_auth_verification.xml-->
    <string name="edit_text_verification_code_hint">Verification code</string>
    <string name="text_view_verification_code_label">Verifying your code</string>
    <string name="text_view_verification_code_label_description">SMS Verification code has been sent</string>
    <string name="button_verify_code_text">Verify</string>
    <string name="button_resend_verification_code_text">Re-send</string>
    <string name="item_refresh_action_title">Refresh</string>
    <string name="refreshing_contact_message">Refreshing</string>

</resources>
